2021-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (pk_cmd_sub): New function.
	(sub_cmd): Define.
	(close_if_sub_of): New function.
	(pk_cmd_close): Close sub-IOS automatically.
	* poke/pk-cmd.c (dot_cmds): Register sub_cmd.
	* libpoke/ios.c (ios_map): Allow callbacks to remove the given
	ios.
	* testsuite/poke.cmd/close-sub-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
	* doc/poke.texi (close command): Note how .closing an IO space
	also closes sub-spaces.
	(sub command): New section.

2021-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (pk_cmd_proc): New function.
	(proc_cmd): Define.
	* poke/pk-cmd.c (dot_cmds): Add proc_cmd.
	* doc/poke.texi (proc command): New section.

2021-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac (HAVE_PROC): Define if the host OS provides a proc/
	directory.
	* libpoke/ios-dev-proc.c: New file.
	* libpoke/Makefile.am (libpoke_la_SOURCES): Add ios-dev-proc.c.
	* libpoke/ios.c (ios_dev_ifs): Add ios_dev_proc.

2021-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios-dev.h: Prototypes for ios_get_dev and
	ios_get_dev_if.
	* libpoke/ios.c (ios_get_dev): New function.
	(ios_get_dev_if): Likewise.
	(ios_dev_ifs): Register ios_dev_sub.
	(ios_write_int): Return IOS_EPERM if the IOS is not writable.
	(ios_write_uint): Likewise.
	(ios_write_string): Likewise.
	* libpoke/ios-dev-sub.c: New file.
	* libpoke/Makefile.am (libpoke_la_SOURCES): Add ios-dev-sub.c.
	* libpoke/std.pk (opensub): New function.
	* testsuite/poke.pkl/open-sub-1.pk: New test.
	* testsuite/poke.pkl/open-sub-2.pk: Likewise.
	* testsuite/poke.pkl/open-sub-3.pk: Likewise.
	* testsuite/poke.pkl/open-sub-4.pk: Likewise.
	* testsuite/poke.pkl/open-sub-5.pk: Likewise.
	* testsuite/poke.pkl/open-sub-6.pk: Likewise.
	* testsuite/poke.pkl/open-sub-7.pk: Likewise.
	* testsuite/poke.pkl/open-sub-8.pk: Likewise.
	* testsuite/poke.pkl/open-sub-9.pk: Likewise.
	* testsuite/poke.pkl/open-sub-10.pk: Likewise.